3. Machine_Independent_Code/y.output
Terminals unused in grammar

    COMMENT
    ERROR


State 233 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_CONSTANT
    3                   | CHAR_CONSTANT
    4                   | STRING_LITERAL
    5                   | OPEN_BRACKET expression CLOSE_BRACKET

    6 postfix_expression: primary_expression
    7                   | postfix_expression OPEN_SQUARE_BRACKET expression CLOSE_SQUARE_BRACKET
    8                   | postfix_expression OPEN_BRACKET CLOSE_BRACKET
    9                   | postfix_expression OPEN_BRACKET argument_expression_list CLOSE_BRACKET
   10                   | postfix_expression POINTER_INDIRECTION IDENTIFIER

   11 argument_expression_list: assignment_expression
   12                         | argument_expression_list COMMA assignment_expression

   13 unary_expression: postfix_expression
   14                 | unary_operator O unary_expression

   15 unary_operator: AND
   16               | MULT
   17               | ADD
   18               | SUB
   19               | NOT

   20 multiplicative_expression: unary_expression
   21                          | multiplicative_expression MULT unary_expression
   22                          | multiplicative_expression DIVIDE unary_expression
   23                          | multiplicative_expression REMAINDER unary_expression

   24 additive_expression: multiplicative_expression
   25                    | additive_expression ADD multiplicative_expression
   26                    | additive_expression SUB multiplicative_expression

   27 relational_expression: additive_expression
   28                      | relational_expression LESS_THAN additive_expression
   29                      | relational_expression GREATER_THAN additive_expression
   30                      | relational_expression LESS_THAN_OR_EQUAL additive_expression
   31                      | relational_expression GREATER_THAN_OR_EQUAL additive_expression

   32 equality_expression: relational_expression
   33                    | equality_expression EQUAL_TO relational_expression
   34                    | equality_expression NOT_EQUAL_TO relational_expression

   35 logical_AND_expression: equality_expression
   36                       | logical_AND_expression LOGICAL_AND M equality_expression

   37 logical_OR_expression: logical_AND_expression
   38                      | logical_OR_expression LOGICAL_OR M logical_AND_expression

   39 conditional_expression: logical_OR_expression
   40                       | logical_OR_expression N QUESTION_MARK M expression N COLON M conditional_expression

   41 assignment_expression: conditional_expression
   42                      | unary_expression EQUAL assignment_expression

   43 expression: assignment_expression

   44 internal_declaration: non_void_type_specifier declarator
   45                     | VOID pointer direct_declarator

   46 direct_declarator: IDENTIFIER OPEN_SQUARE_BRACKET INTEGER_CONSTANT CLOSE_SQUARE_BRACKET SEMI_COLON
   47                  | IDENTIFIER SEMI_COLON
   48                  | IDENTIFIER EQUAL initializer SEMI_COLON

   49 non_void_type_specifier: CHAR
   50                        | INT

   51 declarator: direct_declarator
   52           | pointer direct_declarator

   53 pointer: MULT

   54 parameter_list2: parameter_declaration2
   55                | parameter_declaration2 COMMA parameter_list2

   56 parameter_declaration2: INT IDENTIFIER
   57                       | CHAR IDENTIFIER
   58                       | non_void_type_specifier pointer IDENTIFIER
   59                       | VOID pointer IDENTIFIER

   60 initializer: assignment_expression

   61 statement: compound_statement
   62          | expression_statement
   63          | selection_statement
   64          | iteration_statement
   65          | jump_statement

   66 compound_statement: OPEN_FLOWER_BRACKET CLOSE_FLOWER_BRACKET
   67                   | OPEN_FLOWER_BRACKET block_item_list CLOSE_FLOWER_BRACKET

   68 block_item_list: block_item
   69                | block_item_list M block_item

   70 block_item: internal_declaration
   71           | statement

   72 expression_statement: SEMI_COLON
   73                     | expression SEMI_COLON

   74 selection_statement: IF OPEN_BRACKET expression N CLOSE_BRACKET M statement N ELSE M statement
   75                    | IF OPEN_BRACKET expression N CLOSE_BRACKET M statement N

   76 iteration_statement: FOR OPEN_BRACKET expression_statement M expression_statement N M expression N CLOSE_BRACKET M statement

   77 jump_statement: RETURN SEMI_COLON
   78               | RETURN expression SEMI_COLON

   79 translation_unit: function
   80                 | function translation_unit

   81 function: internal_declaration
   82         | VOID pointer IDENTIFIER OPEN_BRACKET CLOSE_BRACKET SEMI_COLON
   83         | VOID IDENTIFIER OPEN_BRACKET CLOSE_BRACKET SEMI_COLON
   84         | VOID IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET SEMI_COLON
   85         | VOID pointer IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET SEMI_COLON
   86         | VOID IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET SEMI_COLON
   87         | VOID pointer IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET SEMI_COLON
   88         | non_void_type_specifier pointer IDENTIFIER OPEN_BRACKET CLOSE_BRACKET SEMI_COLON
   89         | non_void_type_specifier IDENTIFIER OPEN_BRACKET CLOSE_BRACKET SEMI_COLON
   90         | non_void_type_specifier IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET SEMI_COLON
   91         | non_void_type_specifier pointer IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET SEMI_COLON
   92         | non_void_type_specifier IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET SEMI_COLON
   93         | non_void_type_specifier pointer IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET SEMI_COLON
   94         | function_definition

   95 $@1: ε

   96 function_definition: VOID IDENTIFIER OPEN_BRACKET CLOSE_BRACKET $@1 compound_statement F

   97 $@2: ε

   98 function_definition: VOID pointer IDENTIFIER OPEN_BRACKET CLOSE_BRACKET $@2 compound_statement F

   99 $@3: ε

  100 function_definition: VOID IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET $@3 compound_statement F

  101 $@4: ε

  102 function_definition: VOID pointer IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET $@4 compound_statement F

  103 $@5: ε

  104 function_definition: VOID IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET $@5 compound_statement F

  105 $@6: ε

  106 function_definition: VOID pointer IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET $@6 compound_statement F

  107 $@7: ε

  108 function_definition: non_void_type_specifier IDENTIFIER OPEN_BRACKET CLOSE_BRACKET $@7 compound_statement F

  109 $@8: ε

  110 function_definition: non_void_type_specifier pointer IDENTIFIER OPEN_BRACKET CLOSE_BRACKET $@8 compound_statement F

  111 $@9: ε

  112 function_definition: non_void_type_specifier IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET $@9 compound_statement F

  113 $@10: ε

  114 function_definition: non_void_type_specifier pointer IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET $@10 compound_statement F

  115 $@11: ε

  116 function_definition: non_void_type_specifier IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET $@11 compound_statement F

  117 $@12: ε

  118 function_definition: non_void_type_specifier pointer IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET $@12 compound_statement F

  119 M: ε

  120 N: ε

  121 O: ε

  122 F: ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    COMMENT (258)
    ERROR (259)
    VOID (260) 45 59 82 83 84 85 86 87 90 91 96 98 100 102 104 106 116 118
    IF (261) 74 75
    ELSE (262) 74
    FOR (263) 76
    RETURN (264) 77 78
    POINTER_INDIRECTION (265) 10
    LESS_THAN_OR_EQUAL (266) 30
    GREATER_THAN_OR_EQUAL (267) 31
    EQUAL_TO (268) 33
    NOT_EQUAL_TO (269) 34
    LOGICAL_OR (270) 38
    LOGICAL_AND (271) 36
    OPEN_SQUARE_BRACKET (272) 7 46
    CLOSE_SQUARE_BRACKET (273) 7 46
    OPEN_BRACKET (274) 5 8 9 74 75 76 82 83 84 85 86 87 88 89 90 91 92 93 96 98 100 102 104 106 108 110 112 114 116 118
    CLOSE_BRACKET (275) 5 8 9 74 75 76 82 83 84 85 86 87 88 89 90 91 92 93 96 98 100 102 104 106 108 110 112 114 116 118
    OPEN_FLOWER_BRACKET (276) 66 67
    CLOSE_FLOWER_BRACKET (277) 66 67
    AND (278) 15
    MULT (279) 16 21 53
    ADD (280) 17 25
    SUB (281) 18 26
    DIVIDE (282) 22
    REMAINDER (283) 23
    NOT (284) 19
    QUESTION_MARK (285) 40
    LESS_THAN (286) 28
    GREATER_THAN (287) 29
    EQUAL (288) 42 48
    COLON (289) 40
    SEMI_COLON (290) 46 47 48 72 73 77 78 82 83 84 85 86 87 88 89 90 91 92 93
    COMMA (291) 12 55
    CHAR (292) 49 57
    INT (293) 50 56
    IDENTIFIER <datatype> (294) 1 10 46 47 48 56 57 58 59 82 83 84 85 86 87 88 89 90 91 92 93 96 98 100 102 104 106 108 110 112 114 116 118
    INTEGER_CONSTANT <intval> (295) 2 46
    CHAR_CONSTANT <charval> (296) 3
    STRING_LITERAL <strval> (297) 4


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    primary_expression <attribute_exp> (44)
        on left: 1 2 3 4 5
        on right: 6
    postfix_expression <attribute_exp> (45)
        on left: 6 7 8 9 10
        on right: 7 8 9 10 13
    argument_expression_list <param_attr> (46)
        on left: 11 12
        on right: 9 12
    unary_expression <attribute_exp> (47)
        on left: 13 14
        on right: 14 20 21 22 23 42
    unary_operator <attribute_unary> (48)
        on left: 15 16 17 18 19
        on right: 14
    multiplicative_expression <attribute_exp> (49)
        on left: 20 21 22 23
        on right: 21 22 23 24 25 26
    additive_expression <attribute_exp> (50)
        on left: 24 25 26
        on right: 25 26 27 28 29 30 31
    relational_expression <attribute_exp> (51)
        on left: 27 28 29 30 31
        on right: 28 29 30 31 32 33 34
    equality_expression <attribute_exp> (52)
        on left: 32 33 34
        on right: 33 34 35 36
    logical_AND_expression <attribute_exp> (53)
        on left: 35 36
        on right: 36 37 38
    logical_OR_expression <attribute_exp> (54)
        on left: 37 38
        on right: 38 39 40
    conditional_expression <attribute_exp> (55)
        on left: 39 40
        on right: 40 41
    assignment_expression <attribute_exp> (56)
        on left: 41 42
        on right: 11 12 42 43 60
    expression <attribute_exp> (57)
        on left: 43
        on right: 5 7 40 73 74 75 76 78
    internal_declaration <datatype> (58)
        on left: 44 45
        on right: 70 81
    direct_declarator <datatype> (59)
        on left: 46 47 48
        on right: 45 51 52
    non_void_type_specifier <datatype> (60)
        on left: 49 50
        on right: 44 58 88 89 90 91 92 93 108 110 112 114 116 118
    declarator <datatype> (61)
        on left: 51 52
        on right: 44
    pointer <datatype> (62)
        on left: 53
        on right: 45 52 58 59 82 85 87 88 91 93 98 102 106 110 114 118
    parameter_list2 <parametertype> (63)
        on left: 54 55
        on right: 55 86 87 92 93 100 102 112 114
    parameter_declaration2 <datatype> (64)
        on left: 56 57 58 59
        on right: 54 55
    initializer <datatype> (65)
        on left: 60
        on right: 48
    statement <attribute_exp> (66)
        on left: 61 62 63 64 65
        on right: 71 74 75 76
    compound_statement <attribute_exp> (67)
        on left: 66 67
        on right: 61 96 98 100 102 104 106 108 110 112 114 116 118
    block_item_list <attribute_exp> (68)
        on left: 68 69
        on right: 67 69
    block_item <attribute_exp> (69)
        on left: 70 71
        on right: 68 69
    expression_statement <attribute_exp> (70)
        on left: 72 73
        on right: 62 76
    selection_statement <attribute_exp> (71)
        on left: 74 75
        on right: 63
    iteration_statement <attribute_exp> (72)
        on left: 76
        on right: 64
    jump_statement <attribute_exp> (73)
        on left: 77 78
        on right: 65
    translation_unit (74)
        on left: 79 80
        on right: 0 80
    function (75)
        on left: 81 82 83 84 85 86 87 88 89 90 91 92 93 94
        on right: 79 80
    function_definition (76)
        on left: 96 98 100 102 104 106 108 110 112 114 116 118
        on right: 94
    $@1 (77)
        on left: 95
        on right: 96
    $@2 (78)
        on left: 97
        on right: 98
    $@3 (79)
        on left: 99
        on right: 100
    $@4 (80)
        on left: 101
        on right: 102
    $@5 (81)
        on left: 103
        on right: 104
    $@6 (82)
        on left: 105
        on right: 106
    $@7 (83)
        on left: 107
        on right: 108
    $@8 (84)
        on left: 109
        on right: 110
    $@9 (85)
        on left: 111
        on right: 112
    $@10 (86)
        on left: 113
        on right: 114
    $@11 (87)
        on left: 115
        on right: 116
    $@12 (88)
        on left: 117
        on right: 118
    M <instr> (89)
        on left: 119
        on right: 36 38 40 69 74 75 76
    N <N_attr> (90)
        on left: 120
        on right: 40 74 75 76
    O <instr> (91)
        on left: 121
        on right: 14
    F (92)
        on left: 122
        on right: 96 98 100 102 104 106 108 110 112 114 116 118


State 0

    0 $accept: • translation_unit $end

    VOID  shift, and go to state 1
    CHAR  shift, and go to state 2
    INT   shift, and go to state 3

    internal_declaration     go to state 4
    non_void_type_specifier  go to state 5
    translation_unit         go to state 6
    function                 go to state 7
    function_definition      go to state 8


State 1

   45 internal_declaration: VOID • pointer direct_declarator
   82 function: VOID • pointer IDENTIFIER OPEN_BRACKET CLOSE_BRACKET SEMI_COLON
   83         | VOID • IDENTIFIER OPEN_BRACKET CLOSE_BRACKET SEMI_COLON
   84         | VOID • IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET SEMI_COLON
   85         | VOID • pointer IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET SEMI_COLON
   86         | VOID • IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET SEMI_COLON
   87         | VOID • pointer IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET SEMI_COLON
   96 function_definition: VOID • IDENTIFIER OPEN_BRACKET CLOSE_BRACKET $@1 compound_statement F
   98                    | VOID • pointer IDENTIFIER OPEN_BRACKET CLOSE_BRACKET $@2 compound_statement F
  100                    | VOID • IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET $@3 compound_statement F
  102                    | VOID • pointer IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET $@4 compound_statement F
  104                    | VOID • IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET $@5 compound_statement F
  106                    | VOID • pointer IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET $@6 compound_statement F

    MULT        shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    pointer  go to state 11


State 2

   49 non_void_type_specifier: CHAR •

    $default  reduce using rule 49 (non_void_type_specifier)


State 3

   50 non_void_type_specifier: INT •

    $default  reduce using rule 50 (non_void_type_specifier)


State 4

   81 function: internal_declaration •

    $default  reduce using rule 81 (function)


State 5

   44 internal_declaration: non_void_type_specifier • declarator
   88 function: non_void_type_specifier • pointer IDENTIFIER OPEN_BRACKET CLOSE_BRACKET SEMI_COLON
   89         | non_void_type_specifier • IDENTIFIER OPEN_BRACKET CLOSE_BRACKET SEMI_COLON
   90         | non_void_type_specifier • IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET SEMI_COLON
   91         | non_void_type_specifier • pointer IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET SEMI_COLON
   92         | non_void_type_specifier • IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET SEMI_COLON
   93         | non_void_type_specifier • pointer IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET SEMI_COLON
  108 function_definition: non_void_type_specifier • IDENTIFIER OPEN_BRACKET CLOSE_BRACKET $@7 compound_statement F
  110                    | non_void_type_specifier • pointer IDENTIFIER OPEN_BRACKET CLOSE_BRACKET $@8 compound_statement F
  112                    | non_void_type_specifier • IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET $@9 compound_statement F
  114                    | non_void_type_specifier • pointer IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET $@10 compound_statement F
  116                    | non_void_type_specifier • IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET $@11 compound_statement F
  118                    | non_void_type_specifier • pointer IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET $@12 compound_statement F

    MULT        shift, and go to state 9
    IDENTIFIER  shift, and go to state 12

    direct_declarator  go to state 13
    declarator         go to state 14
    pointer            go to state 15


State 6

    0 $accept: translation_unit • $end

    $end  shift, and go to state 16


State 7

   79 translation_unit: function •
   80                 | function • translation_unit

    VOID  shift, and go to state 1
    CHAR  shift, and go to state 2
    INT   shift, and go to state 3

    $default  reduce using rule 79 (translation_unit)

    internal_declaration     go to state 4
    non_void_type_specifier  go to state 5
    translation_unit         go to state 17
    function                 go to state 7
    function_definition      go to state 8


State 8

   94 function: function_definition •

    $default  reduce using rule 94 (function)


State 9

   53 pointer: MULT •

    $default  reduce using rule 53 (pointer)


State 10

   83 function: VOID IDENTIFIER • OPEN_BRACKET CLOSE_BRACKET SEMI_COLON
   84         | VOID IDENTIFIER • OPEN_BRACKET VOID CLOSE_BRACKET SEMI_COLON
   86         | VOID IDENTIFIER • OPEN_BRACKET parameter_list2 CLOSE_BRACKET SEMI_COLON
   96 function_definition: VOID IDENTIFIER • OPEN_BRACKET CLOSE_BRACKET $@1 compound_statement F
  100                    | VOID IDENTIFIER • OPEN_BRACKET parameter_list2 CLOSE_BRACKET $@3 compound_statement F
  104                    | VOID IDENTIFIER • OPEN_BRACKET VOID CLOSE_BRACKET $@5 compound_statement F

    OPEN_BRACKET  shift, and go to state 18


State 11

   45 internal_declaration: VOID pointer • direct_declarator
   82 function: VOID pointer • IDENTIFIER OPEN_BRACKET CLOSE_BRACKET SEMI_COLON
   85         | VOID pointer • IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET SEMI_COLON
   87         | VOID pointer • IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET SEMI_COLON
   98 function_definition: VOID pointer • IDENTIFIER OPEN_BRACKET CLOSE_BRACKET $@2 compound_statement F
  102                    | VOID pointer • IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET $@4 compound_statement F
  106                    | VOID pointer • IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET $@6 compound_statement F

    IDENTIFIER  shift, and go to state 19

    direct_declarator  go to state 20


State 12

   46 direct_declarator: IDENTIFIER • OPEN_SQUARE_BRACKET INTEGER_CONSTANT CLOSE_SQUARE_BRACKET SEMI_COLON
   47                  | IDENTIFIER • SEMI_COLON
   48                  | IDENTIFIER • EQUAL initializer SEMI_COLON
   89 function: non_void_type_specifier IDENTIFIER • OPEN_BRACKET CLOSE_BRACKET SEMI_COLON
   90         | non_void_type_specifier IDENTIFIER • OPEN_BRACKET VOID CLOSE_BRACKET SEMI_COLON
   92         | non_void_type_specifier IDENTIFIER • OPEN_BRACKET parameter_list2 CLOSE_BRACKET SEMI_COLON
  108 function_definition: non_void_type_specifier IDENTIFIER • OPEN_BRACKET CLOSE_BRACKET $@7 compound_statement F
  112                    | non_void_type_specifier IDENTIFIER • OPEN_BRACKET parameter_list2 CLOSE_BRACKET $@9 compound_statement F
  116                    | non_void_type_specifier IDENTIFIER • OPEN_BRACKET VOID CLOSE_BRACKET $@11 compound_statement F

    OPEN_SQUARE_BRACKET  shift, and go to state 21
    OPEN_BRACKET         shift, and go to state 22
    EQUAL                shift, and go to state 23
    SEMI_COLON           shift, and go to state 24


State 13

   51 declarator: direct_declarator •

    $default  reduce using rule 51 (declarator)


State 14

   44 internal_declaration: non_void_type_specifier declarator •

    $default  reduce using rule 44 (internal_declaration)


State 15

   52 declarator: pointer • direct_declarator
   88 function: non_void_type_specifier pointer • IDENTIFIER OPEN_BRACKET CLOSE_BRACKET SEMI_COLON
   91         | non_void_type_specifier pointer • IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET SEMI_COLON
   93         | non_void_type_specifier pointer • IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET SEMI_COLON
  110 function_definition: non_void_type_specifier pointer • IDENTIFIER OPEN_BRACKET CLOSE_BRACKET $@8 compound_statement F
  114                    | non_void_type_specifier pointer • IDENTIFIER OPEN_BRACKET parameter_list2 CLOSE_BRACKET $@10 compound_statement F
  118                    | non_void_type_specifier pointer • IDENTIFIER OPEN_BRACKET VOID CLOSE_BRACKET $@12 compound_statement F

    IDENTIFIER  shift, and go to state 25

    direct_declarator  go to state 26


State 16

    0 $accept: translation_unit $end •

    $default  accept


State 17

   80 translation_unit: function translation_unit •

    $default  reduce using rule 80 (translation_unit)


State 18

   83 function: VOID IDENTIFIER OPEN_BRACKET • CLOSE_BRACKET SEMI_COLON
   84         | VOID IDENTIFIER OPEN_BRACKET • VOID CLOSE_BRACKET SEMI_COLON
   86         | VOID IDENTIFIER OPEN_BRACKET • parameter_list2 CLOSE_BRACKET SEMI_COLON
   96 function_definition: VOID IDENTIFIER OPEN_BRACKET • CLOSE_BRACKET $@1 compound_statement F
  100                    | VOID IDENTIFIER OPEN_BRACKET • parameter_list2 CLOSE_BRACKET $@3 compound_statement F
  104                    | VOID IDENTIFIER OPEN_BRACKET • VOID CLOSE_BRACKET $@5 compound_statement F

    VOID           shift, and go to state 27
    CLOSE_BRACKET  shift, and go to state 28
    CHAR           shift, and go to state 29
    INT            shift, and go to state 30

    non_void_type_specifier  go to state 31
    parameter_list2          go to state 32
    parameter_declaration2   go to state 33


State 19

   46 direct_declarator: IDENTIFIER • OPEN_SQUARE_BRACKET INTEGER_CONSTANT CLOSE_SQUARE_BRACKET SEMI_COLON
   47                  | IDENTIFIER • SEMI_COLON
   48                  | IDENTIFIER • EQUAL initializer SEMI_COLON
   82 function: VOID pointer IDENTIFIER • OPEN_BRACKET CLOSE_BRACKET SEMI_COLON
   85         | VOID pointer IDENTIFIER • OPEN_BRACKET VOID CLOSE_BRACKET SEMI_COLON
   87         | VOID pointer IDENTIFIER • OPEN_BRACKET parameter_list2 CLOSE_BRACKET SEMI_COLON
   98 function_definition: VOID pointer IDENTIFIER • OPEN_BRACKET CLOSE_BRACKET $@2 compound_statement F
  102                    | VOID pointer IDENTIFIER • OPEN_BRACKET parameter_list2 CLOSE_BRACKET $@4 compound_statement F
  106                    | VOID pointer IDENTIFIER • OPEN_BRACKET VOID CLOSE_BRACKET $@6 compound_statement F

    OPEN_SQUARE_BRACKET  shift, and go to state 21
    OPEN_BRACKET         shift, and go to state 34
    EQUAL                shift, and go to state 23
    SEMI_COLON           shift, and go to state 24


State 20

   45 internal_declaration: VOID pointer direct_declarator •

    $default  reduce using rule 45 (internal_declaration)


State 21

   46 direct_declarator: IDENTIFIER OPEN_SQUARE_BRACKET • INTEGER_CONSTANT CLOSE_SQUARE_BRACKET SEMI_COLON

    INTEGER_CONSTANT  shift, and go to state 35


State 22

   89 function: non_void_type_specifier IDENTIFIER OPEN_BRACKET • CLOSE_BRACKET SEMI_COLON
   90         | non_void_type_specifier IDENTIFIER OPEN_BRACKET • VOID CLOSE_BRACKET SEMI_COLON
   92         | non_void_type_specifier IDENTIFIER OPEN_BRACKET • parameter_list2 CLOSE_BRACKET SEMI_COLON
  108 function_definition: non_void_type_specifier IDENTIFIER OPEN_BRACKET • CLOSE_BRACKET $@7 compound_statement F
  112                    | non_void_type_specifier IDENTIFIER OPEN_BRACKET • parameter_list2 CLOSE_BRACKET $@9 compound_statement F
  116                    | non_void_type_specifier IDENTIFIER OPEN_BRACKET • VOID CLOSE_BRACKET $@11 compound_statement F

    VOID           shift, and go to state 36
    CLOSE_BRACKET  shift, and go to state 37
    CHAR           shift, and go to state 29
    INT            shift, and go to state 30

    non_void_type_specifier  go to state 31
    parameter_list2          go to state 38
    parameter_declaration2   go to state 33


State 23

   48 direct_declarator: IDENTIFIER EQUAL • initializer SEMI_COLON

    OPEN_BRACKET      shift, and go to state 39
    AND               shift, and go to state 40
    MULT              shift, and go to state 41
    ADD               shift, and go to state 42
    SUB               shift, and go to state 43
    NOT               shift, and go to state 44
    IDENTIFIER        shift, and go to state 45
    INTEGER_CONSTANT  shift, and go to state 46
    CHAR_CONSTANT     shift, and go to state 47
    STRING_LITERAL    shift, and go to state 48

    primary_expression         go to state 49
    postfix_expression         go to state 50
    unary_expression           go to state 51
    unary_operator             go to state 52
    multiplicative_expression  go to state 53
    additive_expression        go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    logical_AND_expression     go to state 57
    logical_OR_expression      go to state 58
    conditional_expression     go to state 59
    assignment_expression      go to state 60
    initializer                go to state 61


State 24

   47 direct_declarator: IDENTIFIER SEMI_COLON •

    $default  reduce using rule 47 (direct_declarator)


State 25

   46 direct_declarator: IDENTIFIER • OPEN_SQUARE_BRACKET INTEGER_CONSTANT CLOSE_SQUARE_BRACKET SEMI_COLON
   47                  | IDENTIFIER • SEMI_COLON
   48                  | IDENTIFIER • EQUAL initializer SEMI_COLON
   88 function: non_void_type_specifier pointer IDENTIFIER • OPEN_BRACKET CLOSE_BRACKET SEMI_COLON
   91         | non_void_type_specifier pointer IDENTIFIER • OPEN_BRACKET VOID CLOSE_BRACKET SEMI_COLON
   93         | non_void_type_specifier pointer IDENTIFIER • OPEN_BRACKET parameter_list2 CLOSE_BRACKET SEMI_COLON
  110 function_definition: non_void_type_specifier pointer IDENTIFIER • OPEN_BRACKET CLOSE_BRACKET $@8 compound_statement F
  114                    | non_void_type_specifier pointer IDENTIFIER • OPEN_BRACKET parameter_list2 CLOSE_BRACKET $@10 compound_statement F
  118                    | non_void_type_specifier pointer IDENTIFIER • OPEN_BRACKET VOID CLOSE_BRACKET $@12 compound_statement F

    OPEN_SQUARE_BRACKET  shift, and go to state 21
    OPEN_BRACKET         shift, and go to state 62
    EQUAL                shift, and go to state 23
    SEMI_COLON           shift, and go to state 24


State 26

   52 declarator: pointer direct_declarator •

    $default  reduce using rule 52 (declarator)


State 27

   59 parameter_declaration2: VOID • pointer IDENTIFIER
   84 function: VOID IDENTIFIER OPEN_BRACKET VOID • CLOSE_BRACKET SEMI_COLON
  104 function_definition: VOID IDENTIFIER OPEN_BRACKET VOID • CLOSE_BRACKET $@5 compound_statement F

    CLOSE_BRACKET  shift, and go to state 63
    MULT           shift, and go to state 9

    pointer  go to state 64


State 28

   83 function: VOID IDENTIFIER OPEN_BRACKET CLOSE_BRACKET • SEMI_COLON
   96 function_definition: VOID IDENTIFIER OPEN_BRACKET CLOSE_BRACKET • $@1 compound_statement F

    SEMI_COLON  shift, and go to state 65

    $default  reduce using rule 95 ($@1)

    $@1  go to state 66


State 29

   49 non_void_type_specifier: CHAR •
   57 parameter_declaration2: CHAR • IDENTIFIER

    IDENTIFIER  shift, and go to state 67

    $default  reduce using rule 49 (non_void_type_specifier)


State 30

   50 non_void_type_specifier: INT •
   56 parameter_declaration2: INT • IDENTIFIER

    IDENTIFIER  shift, and go to state 68

    $default  reduce using rule 50 (non_void_type_specifier)


State 31

   58 parameter_declaration2: non_void_type_specifier • pointer IDENTIFIER

    MULT  shift, and go to state 9

    pointer  go to state 69


State 32

   86 function: VOID IDENTIFIER OPEN_BRACKET parameter_list2 • CLOSE_BRACKET SEMI_COLON
  100 function_definition: VOID IDENTIFIER OPEN_BRACKET parameter_list2 • CLOSE_BRACKET $@3 compound_statement F

    CLOSE_BRACKET  shift, and go to state 70


State 33

   54 parameter_list2: parameter_declaration2 •
   55                | parameter_declaration2 • COMMA parameter_list2

    COMMA  shift, and go to state 71

    $default  reduce using rule 54 (parameter_list2)


State 34

   82 function: VOID pointer IDENTIFIER OPEN_BRACKET • CLOSE_BRACKET SEMI_COLON
   85         | VOID pointer IDENTIFIER OPEN_BRACKET • VOID CLOSE_BRACKET SEMI_COLON
   87         | VOID pointer IDENTIFIER OPEN_BRACKET • parameter_list2 CLOSE_BRACKET SEMI_COLON
   98 function_definition: VOID pointer IDENTIFIER OPEN_BRACKET • CLOSE_BRACKET $@2 compound_statement F
  102                    | VOID pointer IDENTIFIER OPEN_BRACKET • parameter_list2 CLOSE_BRACKET $@4 compound_statement F
  106                    | VOID pointer IDENTIFIER OPEN_BRACKET • VOID CLOSE_BRACKET $@6 compound_statement F

    VOID           shift, and go to state 72
    CLOSE_BRACKET  shift, and go to state 73
    CHAR           shift, and go to state 29
    INT            shift, and go to state 30

    non_void_type_specifier  go to state 31
    parameter_list2          go to state 74
    parameter_declaration2   go to state 33


State 35

   46 direct_declarator: IDENTIFIER OPEN_SQUARE_BRACKET INTEGER_CONSTANT • CLOSE_SQUARE_BRACKET SEMI_COLON

    CLOSE_SQUARE_BRACKET  shift, and go to state 75


State 36

   59 parameter_declaration2: VOID • pointer IDENTIFIER
   90 function: non_void_type_specifier IDENTIFIER OPEN_BRACKET VOID • CLOSE_BRACKET SEMI_COLON
  116 function_definition: non_void_type_specifier IDENTIFIER OPEN_BRACKET VOID • CLOSE_BRACKET $@11 compound_statement F

    CLOSE_BRACKET  shift, and go to state 76
    MULT           shift, and go to state 9

    pointer  go to state 64


State 37

   89 function: non_void_type_specifier IDENTIFIER OPEN_BRACKET CLOSE_BRACKET • SEMI_COLON
  108 function_definition: non_void_type_specifier IDENTIFIER OPEN_BRACKET CLOSE_BRACKET • $@7 compound_statement F

    SEMI_COLON  shift, and go to state 77

    $default  reduce using rule 107 ($@7)

    $@7  go to state 78


State 38

   92 function: non_void_type_specifier IDENTIFIER OPEN_BRACKET parameter_list2 • CLOSE_BRACKET SEMI_COLON
  112 function_definition: non_void_type_specifier IDENTIFIER OPEN_BRACKET parameter_list2 • CLOSE_BRACKET $@9 compound_statement F

    CLOSE_BRACKET  shift, and go to state 79


State 39

    5 primary_expression: OPEN_BRACKET • expression CLOSE_BRACKET

    OPEN_BRACKET      shift, and go to state 39
    AND               shift, and go to state 40
    MULT              shift, and go to state 41
    ADD               shift, and go to state 42
    SUB               shift, and go to state 43
    NOT               shift, and go to state 44
    IDENTIFIER        shift, and go to state 45
    INTEGER_CONSTANT  shift, and go to state 46
    CHAR_CONSTANT     shift, and go to state 47
    STRING_LITERAL    shift, and go to state 48
